Adjust console font

--- a/src/components/gui/Console.css
+++ b/src/components/gui/Console.css
@@ -7,7 +7,7 @@
     position: fixed;
     bottom: 20px;
     left: 20px;
-    color: #232935;
+    color: #5f616b;
     font-family: 'Courier New', monospace;
     font-size: 14px;
     font-weight: bold;
